[package]
name = "flaregun"
version = "1.0.0"
edition = "2024"
resolve = "3"
description = "A Rust library to bypass Cloudflare anti-bot protections"
license = "MIT"
repository = "https://github.com/nacht-org/flaregun"
keywords = ["cloudflare", "scraper", "http", "bot-bypass"]
categories = ["web-programming", "network-programming"]

[dependencies]
# HTTP client with cookie store and TLS support
reqwest = { version = "0.13.2", default-features = false, features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "json",
    "multipart",
    "stream",
    "rustls",
    "socks",
    "http2",
    "charset",
    "form",
    "query",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML / regex parsing
regex = "1"
scraper = "0.26"
html-escape = "0.2"

# URL handling
url = "2"

# Random number generation
rand = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing (structured, async-aware observability)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "1.0"

# Cookie jar
reqwest_cookie_store = "0.10"

# Lazy static initialisation
once_cell = "1"

# String utilities
base64 = "0.22"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Raw HTTP response construction
http = "1"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1"

[features]
default = []
capsolver = []
twocaptcha = []
anticaptcha = []
all-captcha = ["capsolver", "twocaptcha", "anticaptcha"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
